k8s-examples/cc_dms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cc-dms-deploy
  labels:
    name: cc-dms-deploy
    app: chitychat
spec:
  replicas: 1
  selector:
    matchLabels:
      name: cc-dms-pod
      app: chitychat

  template:
    metadata:
      name: cc-dms-pod
      labels:
        name: cc-dms-pod
        app: chitychat
    spec:
      containers:
        - image: 192.168.69.1:5000/chitychat/cc_dms:2.0-dev
          imagePullPolicy: Always
          name: cc-dms
          command: 
            - cc_dms
