k8s-examples/cc_user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cc-user-deploy
  labels:
    name: cc-user-deploy
    app: chitychat
spec:
  replicas: 1
  selector:
    matchLabels:
      name: cc-user-pod
      app: chitychat

  template:
    metadata:
      name: cc-user-pod
      labels:
        name: cc-user-pod
        app: chitychat
    spec:
      containers:
        - image: 192.168.69.1:5000/chitychat/cc_user:2.0-dev
          imagePullPolicy: Always
          name: cc-user
          command: 
            - cc_user
