k8s-examples/cc_sfs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cc-sfs-deploy
  labels:
    name: cc-sfs-deploy
    app: chitychat
spec:
  replicas: 1
  selector:
    matchLabels:
      name: cc-sfs-pod
      app: chitychat

  template:
    metadata:
      name: cc-sfs-pod
      labels:
        name: cc-sfs-pod
        app: chitychat
    spec:
      containers:
        - image: 192.168.69.1:5000/chitychat/cc_sfs:2.0-dev
          imagePullPolicy: Always
          name: cc-sfs
          command: 
            - cc_sfs
          volumeMounts:
            - name: sfs-data
              mountPath: /srv/sfs
      volumes:
        - name: sfs-data
          persistentVolumeClaim:
            claimName: sfs-data-claim

---
apiVersion: v1
kind: Service
metadata:
  name: cc-sfs-svc
spec:
  selector:
    name: cc-sfs-pod
    app: chitychat
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
